Versão inicial do registro de usuários

--- a/GerenciadorCondominios/GerenciadorCondominios.csproj
+++ b/GerenciadorCondominios/GerenciadorCondominios.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\GerenciadorCondominiosDAL\GerenciadorCondominiosDAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Imagens\" />
+  </ItemGroup>
+
 </Project>
