--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -25,6 +25,7 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
 
     - name: SonarCloud Scan
-      # You may pin to the exact commit or the version.
-      # uses: SonarSource/sonarcloud-github-action@f4c6e4d91ea9785ec823eaeed459042606123402
-      uses: SonarSource/sonarcloud-github-action@v1.4
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
