--- a/GerenciadorCondominios/appsettings.json
+++ b/GerenciadorCondominios/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConexaoDB":  "Server=(localdb)\\mssqllocaldb;Database=GerenciadorCondominiosDB;"
+    "ConexaoDB": "Server=(localdb)\\mssqllocaldb;Database=GerenciadorCondominiosDB;",
+    "Context": "Server=(localdb)\\mssqllocaldb;Database=Context-c1139cd4-8c5c-4af0-b837-d74bd1601e29;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
